# Lorei_2.0

./: .gitignore  Build.sh  CMakeLists.txt  Lorei_2.0.sln  README.md
BuildScripts/Linux/: Build.sh
BuildScripts/Windows/: LoreiGUIPostBuild.bat
LoreiGUI/: CMakeLists.txt  LoreiGUI.vcxproj  LoreiGUI.vcxproj.filters  test.cpp  test.h
LoreiGUI/Src/: test.cpp
LoreiLib/: CMakeLists.txt  LoreiLib.h  LoreiLib.vcxproj  LoreiLib.vcxproj.filters
LoreiLib/Src/: LoreiLib.cpp  LoreiLib.h
LoreiLib/Src/ApiProvider/: ApiProvider.cpp  ApiProvider.h
LoreiLib/Src/Processors/: ScriptProcessor.cpp  ScriptProcessor.h
LoreiTest/: BoostTest.cpp  CMakeLists.txt  LoreiTest.vcxproj  LoreiTest.vcxproj.filters  main.cpp  packages.config  test.h
LoreiTest/Src/: BoostTest.cpp
